--- a/pi-weather/src/App.css
+++ b/pi-weather/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #BFD8D2;
+  
 }
 
 .App-logo {
@@ -22,6 +24,24 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.shadow-6 {
+  box-shadow: 0 1px 1px rgba(0,0,0,0.11), 
+              0 2px 2px rgba(0,0,0,0.11), 
+              0 4px 4px rgba(0,0,0,0.11), 
+              0 8px 8px rgba(0,0,0,0.11), 
+              0 16px 16px rgba(0,0,0,0.11), 
+              0 32px 32px rgba(0,0,0,0.11),
+              0 64px 64px rgba(0,0,0,0.11);
+}
+
+h1 {
+  color:#2a186f
+}
+
+h2 {  
+  color:#444
 }
 
 .App-link {
